feat: add API for feature get links logged-in user
