# docs/swagger.json
@@ -13,6 +13,44 @@
     "basePath": "/",
     "paths": {
         "/api/links": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Retrieve a list of all active short links created by the logged-in user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Link Management"
+                ],
+                "summary": "Get all short links for the authenticated user",
+                "responses": {
+                    "200": {
+                        "description": "List of user shortlinks retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response-array_dto_LinkDetailRes"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Token missing or invalid",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error - Database or context error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -283,6 +321,23 @@
                 },
                 "id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.Response-array_dto_LinkDetailRes": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.LinkDetailRes"
+                    }
+                },
+                "isSucces": {
+                    "type": "boolean"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         },
